# RaylibSceneManagerCpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh
src/Game/: CMakeLists.txt  main.cpp  settings.h
src/Game/game/: Game.cpp  Game.h
src/Game/scenes/scene1/: Scene1.cpp  Scene1.h
src/Game/scenes/scene2/: Scene2.cpp  Scene2.h
src/SceneModule/: CMakeLists.txt  Scene.h  SceneManager.cpp  SceneManager.h
